<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="casual"
        android:text="@string/age_calculator"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/BirthdayTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="106dp"
        android:text="@string/set_birth_date"
        app:layout_constraintBottom_toTopOf="@+id/HalfBirthdayHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BirthdayTextDate"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/BirthdayHeader"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="50dp"
        android:text="@string/your_birthdate"
        app:layout_constraintBottom_toBottomOf="@+id/BirthdayTextDate"
        app:layout_constraintEnd_toStartOf="@+id/BirthdayTextDate"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/BirthdayTextDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="83dp"
        android:editable="false"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BirthdayHeader"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/HalfBirthdayHeader"
        android:layout_width="111dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="68dp"
        android:text="@string/your_age"
        app:layout_constraintBottom_toTopOf="@+id/happyBirthdayTextView"
        app:layout_constraintEnd_toStartOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/HalfBirthdayHeader"
        app:layout_constraintTop_toTopOf="@+id/HalfBirthdayHeader">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="39dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:text="@string/years" />

            <TextView
                android:id="@+id/yearsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/months" />

            <TextView
                android:id="@+id/monthsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/days" />

            <TextView
                android:id="@+id/daysTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/happyBirthdayTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="55dp"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HalfBirthdayHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>